--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -277,11 +277,16 @@
                     display: flex;
                     align-items: center;
                     .img-wrapper {
+                      position: relative;
                       height: 70px;
                       width: 70px;
                       border-radius: 8px;
                       background: #C4C4C4;
                       margin-right: 24px;
+                      .img-file {
+                        width: 100%;
+                        height: 100%;
+                      }
                     }
                     .name-wrapper {
                       .name-title {
@@ -590,6 +595,9 @@
           height: 300px;
           width: 300px;
           margin-right: 20px;
+          .img-actual {
+            width: 100%;
+          }
         }
         .update-stock-wrapper {
           .stock-title {
@@ -1392,6 +1400,10 @@
                 .img-actual {
                   width: 100%;
                 }
+                .img-placeholder {
+                  width: 100%;
+                  border-radius: 8px;
+                }
               }
             }
             .image-color-amount-inner-wrapper {
@@ -1661,6 +1673,9 @@
   
             .card-img-wrapper {
               margin-bottom: 16px;
+              .img-actual {
+                width: 100%;
+              }
             }
   
             .card-details {
