--- a/src/styles/lapangan/Aktivitas.scss
+++ b/src/styles/lapangan/Aktivitas.scss
@@ -53,7 +53,7 @@
                     .desc{
                         display: flex;
                         flex-wrap: wrap;
-                        .anda, .wording, .name, .sebanyak, .piece{
+                        .anda, .wording, .name, .size, .sebanyak, .piece{
                             margin-right: 5px;
                         }
                     }
