--- a/src/styles/lapangan/PDP.scss
+++ b/src/styles/lapangan/PDP.scss
@@ -206,9 +206,9 @@
                         background-color: #F5F5F5;
                         border-radius: 6px;
                         height: 52px;
-                        margin-bottom: 145px;
-                        padding-left: 16px;
-                        padding-right: 16px;
+                        // margin-bottom: 145px;
+                        // // padding-left: 16px;
+                        // // padding-right: 16px;
                         padding-top: 14px;
                         .placeholder{
                           position: absolute;
@@ -227,26 +227,30 @@
                           color: black;
                           position: relative;
                           z-index: 10;
+                          margin-left: 16px;
                         }
                         input:focus-visible{
                           outline: none;
                         }
-                    }
-                    .btnkurangistock{
-                        width: 100%;
-                        height: 41.5px;
-                        display: flex;
-                        background-color: #BD1E1E;
-                        justify-content: center;
-                        border-radius: 6px;
-                        align-items: center;
-                        p{
-                            font-family: 'DM Sans';
-                            color: #FFFFFF;
-                            font-size: 14px;
-                            font-weight: 700;
+
+                        .btnkurangistock{
+                            width: 100%;
+                            height: 41.5px;
+                            display: flex;
+                            background-color:  rgba(189, 30, 30, 0.6);
+                            justify-content: center;
+                            border-radius: 6px;
+                            align-items: center;
+                            margin-top: 145px;
+                            p{
+                                font-family: 'DM Sans';
+                                color: #FFFFFF;
+                                font-size: 14px;
+                                font-weight: 700;
+                            }
                         }
                     }
+                    
                 }      
         }          
     }  
@@ -264,7 +268,7 @@
     0%   {bottom: -100vh;}
     100% {bottom: 0;}
   }
-  @keyframes slide-down {
+@keyframes slide-down {
     0%   {bottom: 0;}
     100% {bottom: -100vh;}
   }
@@ -293,7 +297,7 @@
     right: 16px;
     bottom: 85px;   
 .css-1eqdgzv-MuiPaper-root-MuiSnackbarContent-root{
-    background-color: #BD1E1E;
+    background-color:  rgba(189, 30, 30, 0.6);
     border-radius: 16px;
 }
 .css-kmxb0e-MuiButtonBase-root-MuiButton-root{
