--- a/src/styles/lapangan/PDP.scss
+++ b/src/styles/lapangan/PDP.scss
@@ -46,6 +46,8 @@
                 .imgproduk{
                     display: flex;
                     justify-content: center;
+                    height: 300px;
+                    width: 350px;
                 }
                 .produk{
                     display: flex;
