--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -24,7 +24,7 @@
             padding:0px 16px;
             border-radius: 8px;
             background: #F5F5F5;
-            height: 52px;
+            height: 40px;
             .input-search {
               font-size: 16px;
               font-weight: 400;
@@ -49,7 +49,7 @@
               margin-right: 24px;
               .product-select__control, .product-select-lc__control {
                 min-width: 244px;
-                height: 52px;
+                height: 40px;
                 background: #F5F5F5;
                 border: none;
                 border-radius: 8px;
@@ -72,7 +72,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                height: 52px;
+                height: 40px;
                 border: none;
                 border-radius: 6px;
                 background: #017EFA;
@@ -101,7 +101,7 @@
                   border-radius: 10px;
                   position: absolute;
                   right: 0px;
-                  top: 52px;
+                  top: 40px;
                   padding: 16px 0px 16px 20px;
                   list-style: none;
                   margin: 0px;
@@ -359,7 +359,7 @@
                       }
                       td.product-supplier {
                         input {
-                          height: 52px;
+                          height: 40px;
                           border: 1px solid #DADADA;
                           border-radius: 8px;
                           padding: 14px 19px;
@@ -375,8 +375,8 @@
                           .input-precentage {
                             display: flex;
                             align-items: center;
-                            height: 52px;
-                            width: 50%;
+                            height: 40px;
+                            width: 25%;
                             background: #FFF;
                             border: 1px solid #DADADA;
                             border-radius: 8px;
@@ -386,12 +386,18 @@
                               width: 100%;
                               border: none;
                               background: none;
-                              padding: 14px 18px;
+                              padding: 11px 16px;
+                              border-radius: 0px;
+                              border-top-left-radius: 8px;
+                              border-bottom-left-radius: 8px;
+                              outline: none;
                             }
                             .input-append {
                               height: 100%;
-                              padding: 13px 12px;
+                              padding: 10px;
                               background: #F3F4F5;
+                              border-top-right-radius: 8px;
+                              border-bottom-right-radius: 8px;
                               .append-text {
                                 font-size: 18px;
                                 font-weight: 700;
@@ -410,15 +416,18 @@
                         .input-pricing {
                           display: flex;
                           align-items: center;
-                          height: 52px;
+                          height: 40px;
                           background: #FFF;
                           border: 1px solid #DADADA;
                           border-radius: 8px;
                           margin: 0px 32px 16px;
                           .input-prepend {
                             height: 100%;
-                            padding: 13px 17px;
+                            padding: 10px;
                             background: #F3F4F5;
+                            border-radius: 0px;
+                            border-top-left-radius: 8px;
+                            border-bottom-left-radius: 8px;
                             .prepend-text {
                               font-size: 18px;
                               font-weight: 700;
@@ -430,7 +439,11 @@
                             width: 100%;
                             border: none;
                             background: none;
-                            padding: 14px 18px;
+                            padding: 11px 16px;
+                            border-radius: 8px;
+                            border-top-right-radius: 8px;
+                            border-bottom-right-radius: 8px;
+                            outline: none;
                           }
                         }
                       }
@@ -439,7 +452,7 @@
                           display: flex;
                           justify-content: center;
                           align-items: center;
-                          height: 52px;
+                          height: 40px;
                           margin-bottom: 16px;
                           .margin-text {
                             font-size: 16px;
@@ -631,7 +644,7 @@
               align-items: center;
               .add-dec-button {
                 width: 48px;
-                height: 52px;
+                height: 40px;
                 border: none;
                 background: #017EFA;
                 font-size: 30px;
@@ -1982,7 +1995,7 @@
           margin-bottom: 24px;
           .add-dec-button {
             width: 48px;
-            height: 52px;
+            height: 40px;
             border: none;
             background: #017EFA;
             font-size: 30px;
