--- a/src/styles/manajemen/Dashboard.scss
+++ b/src/styles/manajemen/Dashboard.scss
@@ -815,10 +815,15 @@
       height: 52px;
       display: flex;
       align-items: center;
-      gap: 14px;
+      gap: 10px;
+      padding-left: 30px;
+      .setting{
+        margin-right: 10px;
+      }
       p{
         font-size: 16px;
         font-weight: 600;
+        color: #000000;
       }
     }
   }
