--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -2367,11 +2367,11 @@
                   
                   .item-details {
                     text-align:left!important;
-                    
+                    padding-right: 24px;
                     .img-and-name-wrapper {
                       display: flex;
                       align-items: center;
-                      // padding-left: 16px;
+                      
                       .img-wrapper {
                         height: 40px;
                         width: 40px;
