--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -24,7 +24,7 @@
             padding:0px 16px;
             border-radius: 8px;
             background: #F5F5F5;
-            height: 40px;
+            height: 52px;
             .input-search {
               font-size: 16px;
               font-weight: 400;
@@ -49,7 +49,7 @@
               margin-right: 24px;
               .product-select__control, .product-select-lc__control {
                 min-width: 244px;
-                height: 40px;
+                height: 52px;
                 background: #F5F5F5;
                 border: none;
                 border-radius: 8px;
@@ -72,7 +72,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                height: 40px;
+                height: 52px;
                 border: none;
                 border-radius: 6px;
                 background: #017EFA;
@@ -101,12 +101,13 @@
                   border-radius: 10px;
                   position: absolute;
                   right: 0px;
-                  top: 40px;
+                  top: 52px;
                   padding: 16px 0px 16px 20px;
                   list-style: none;
                   margin: 0px;
                   min-width: 189px;
                   .button-options {
+                    cursor: pointer;
                     .option-text {
                       font-size: 14px;
                       font-weight: 400;
@@ -203,7 +204,7 @@
                     display: flex;
                     align-items: center;
                     padding: 11px 16px;
-                    height: 40px;
+                    height: 52px;
                     border-radius: 6px;
                     border: 1px solid #017EFA;
                     background: #FFF;
@@ -359,7 +360,7 @@
                       }
                       td.product-supplier {
                         input {
-                          height: 40px;
+                          height: 52px;
                           border: 1px solid #DADADA;
                           border-radius: 8px;
                           padding: 14px 19px;
@@ -375,7 +376,7 @@
                           .input-precentage {
                             display: flex;
                             align-items: center;
-                            height: 40px;
+                            height: 52px;
                             width: 25%;
                             background: #FFF;
                             border: 1px solid #DADADA;
@@ -416,7 +417,7 @@
                         .input-pricing {
                           display: flex;
                           align-items: center;
-                          height: 40px;
+                          height: 52px;
                           background: #FFF;
                           border: 1px solid #DADADA;
                           border-radius: 8px;
@@ -452,7 +453,7 @@
                           display: flex;
                           justify-content: center;
                           align-items: center;
-                          height: 40px;
+                          height: 52px;
                           margin-bottom: 16px;
                           .margin-text {
                             font-size: 16px;
@@ -549,14 +550,19 @@
       .dialog-icon {
         margin-bottom: 24px;
       }
-      .dialog-input-code {
-        padding: 16px;
-        border-radius: 6px;
-        background: #F5F5F5;
-        color: #393939;
-        border: none;
-        min-width: 45%;
-        outline: none;
+      .dialog-input-form {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        .dialog-input-code {
+          padding: 16px;
+          border-radius: 6px;
+          background: #F5F5F5;
+          color: #393939;
+          border: none;
+          min-width: 45%;
+          outline: none;
+        }
       }
     }
     .dialog-button-wrapper {
@@ -936,6 +942,504 @@
       &:disabled {
         background: #CDCDCD;
         color: #7E8287;
+      }
+    }
+  }
+}
+
+.add-cat-prod-wrapper {
+  padding: 24px;
+  .garis{
+    display: none;
+  }
+  .add-cat-prod-step-1 {
+    .dialog-header {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      margin-bottom: 16px;
+      .dialog-title {
+        font-size: 24px;
+        font-weight: 700;
+        color: #31353B;
+        margin: 0px;
+      }
+      .btn.btn-close {
+        padding: 8px;
+        background: none;
+        border: none;
+      }
+    }
+    .dialog-body {
+      .dialog-subtitle {
+        font-size: 16px;
+        font-weight: 400;
+        color: #7E8287;
+        margin-bottom: 36px;
+      }
+      .input-category-wrapper {
+        padding: 8px 16px;
+        width: 100%;
+        background: #F5F5F5;
+        border-radius: 6px;
+        margin-bottom: 260px;
+        .input-category-title {
+          font-size: 10px;
+          font-weight: 700;
+          color: #999CA0;
+        }
+        .input-category-field {
+          border: none;
+          background: none;
+          width: 100%;
+          outline: none;
+        }
+      }
+    }
+    .dialog-button-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      .btn.btn-secondary {
+        padding: 11px 16px;
+        height: 40px;
+        border: 2px solid #017EFA;
+        border-radius: 6px;
+        background: #FFF;
+        font-size: 14px;
+        font-weight: 700;
+        color: #017EFA;
+        margin-right: 16px;
+        &:disabled {
+          background: #CDCDCD;
+          color: #7E8287;
+        }
+      }
+      .btn-primary {
+        padding: 11px 16px;
+        height: 40px;
+        border: none;
+        border-radius: 6px;
+        background: #017EFA;
+        font-size: 14px;
+        font-weight: 700;
+        color: #FFF;
+        &:disabled {
+          background: #CDCDCD;
+          color: #7E8287;
+        }
+      }
+    }
+    .dialog-button-wrapper-mobile {
+      display: none;
+      align-items: center;
+      
+      .btn-primary {
+        padding: 11px 16px;
+        height: 40px;
+        width: 100%;
+        border: none;
+        border-radius: 6px;
+        background: #017EFA;
+        font-size: 14px;
+        font-weight: 700;
+        color: #FFF;
+        &:disabled {
+          background: #CDCDCD;
+          color: #7E8287;
+        }
+      }
+    }
+  }
+  .add-cat-prod-step-2 {
+    .add-product-first-step {
+      .garis{
+        display: none;
+      }
+      .dialog-header {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        margin-bottom: 16px;
+        .dialog-title {
+          font-size: 24px;
+          font-weight: 700;
+          color: #31353B;
+          margin: 0px;
+        }
+        .btn.btn-close {
+          padding: 8px;
+          background: none;
+          border: none;
+        }
+      }
+      .dialog-body {
+        .dialog-subtitle {
+          font-size: 16px;
+          font-weight: 400;
+          color: #7E8287;
+          margin-bottom: 20px;
+        }
+        .input-wrapper {
+          padding: 8px 16px;
+          width: 100%;
+          background: #F5F5F5;
+          border-radius: 6px;
+          margin-bottom: 16px;
+          .input-title {
+            font-size: 10px;
+            font-weight: 700;
+            color: #999CA0;
+          }
+          .input-field {
+            border: none;
+            background: none;
+            width: 100%;
+            outline: none;
+          }
+          .category-select-add__control, .category-select-add-lc__control {
+            width: 100%;
+            background: none;
+            border: none;
+
+            .category-select-add__value-container {
+              padding-left: 0;
+
+              .category-select-add__single-value {
+                font-size: 14px;
+                font-weight: 400;
+                color: #393939;
+              }
+            }
+      
+            .category-select-add__indicators, .category-select-add-lc__indicators {
+              .category-select-add__indicator-separator, .category-select-add-lc__indicator-separator {
+                display: none;
+              }
+            }
+          }
+          .product-select-lc__control {
+            margin-right: 0px;
+          }
+        }
+        .no-margin {
+          margin-bottom: 0px;
+        }
+        .dialog-second-subtitle {
+          font-size: 12px;
+          font-weight: 400;
+          color: #999CA0;
+          margin: 8px 0px 16px;
+        }
+      }
+      .dialog-button-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        margin-top: 32px;
+        .btn.btn-secondary {
+          padding: 11px 16px;
+          height: 40px;
+          border: 2px solid #017EFA;
+          border-radius: 6px;
+          background: #FFF;
+          font-size: 14px;
+          font-weight: 700;
+          color: #017EFA;
+          margin-right: 16px;
+          &:disabled {
+            background: #CDCDCD;
+            color: #7E8287;
+          }
+        }
+        .btn-primary {
+          padding: 11px 16px;
+          height: 40px;
+          border: none;
+          border-radius: 6px;
+          background: #017EFA;
+          font-size: 14px;
+          font-weight: 700;
+          color: #FFF;
+          &:disabled {
+            background: #CDCDCD;
+            color: #7E8287;
+          }
+        }
+      }
+      .dialog-button-wrapper-mobile {
+        display: none;
+        align-items: center;
+        margin-top: 32px;
+        .btn-primary {
+          padding: 11px 16px;
+          height: 40px;
+          width: 100%;
+          border: none;
+          border-radius: 6px;
+          background: #017EFA;
+          font-size: 14px;
+          font-weight: 700;
+          color: #FFF;
+          &:disabled {
+            background: #CDCDCD;
+            color: #7E8287;
+          }
+        }
+      }
+    }
+  }
+  .add-cat-prod-step-3 {
+    .add-product-second-step {
+      padding: 24px;
+      .dialog-header {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        margin-bottom: 16px;
+        .header-inner-wrapper {
+          display: flex;
+          .btn-back {
+            background: none;
+            border: none;
+            margin-right: 20px;
+          }
+          .dialog-title {
+            font-size: 24px;
+            font-weight: 700;
+            color: #31353B;
+            margin: 0px;
+          }
+        }
+        .btn.btn-close {
+          padding: 8px;
+          background: none;
+          border: none;
+        }
+      }
+      .dialog-header-mobile {
+        display: none;
+        align-items: flex-start;
+        justify-content: space-between;
+        margin-bottom: 16px;
+        .header-inner-wrapper {
+          display: flex;
+          .btn-back {
+            background: none;
+            border: none;
+            margin-right: 20px;
+          }
+          .dialog-title {
+            font-size: 24px;
+            font-weight: 700;
+            color: #31353B;
+            margin: 0px;
+          }
+        }
+        .btn.btn-close {
+          padding: 8px;
+          background: none;
+          border: none;
+        }
+      }
+      .dialog-body {
+        .dialog-subtitle {
+          font-size: 16px;
+          font-weight: 400;
+          color: #7E8287;
+          margin-bottom: 25px;
+        }
+        .dialog-inner-body {
+          margin: 0px -24px;
+          padding: 24px;
+          background: rgba(244, 247, 252, 0.5);
+          border-top: 1px solid #CCC;
+          border-bottom: 1px solid #CCC;
+          .image-color-amount-wrapper {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            margin-bottom: 24px;
+            .input-img-wrapper {
+              margin-right: 16px;
+              .input-img-border {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100px;
+                width: 100px;
+                border-radius: 8px;
+                border: 1px dashed #017EFA;
+                .img-actual {
+                  width: 100%;
+                }
+              }
+            }
+            .image-color-amount-inner-wrapper {
+              width: 100%;
+              display: flex;
+              align-items: flex-start;
+              .input-wrapper {
+                width: 100%;
+                .input-title {
+                  font-size: 14px;
+                  font-weight: 400;
+                  color: #393939;
+                  margin-bottom: 10px;
+                }
+                .input-field {
+                  padding: 14px 11px;
+                  border: 1px solid #DADADA;
+                  border-radius: 8px;
+                  width: 100%;
+                }
+                .input-subtitle {
+                  margin-top: 8px;
+                  font-size: 12px;
+                  font-weight: 400;
+                  color: #999CA0;
+                  .bold {
+                    color: #000;
+                  }
+                }
+              }
+            }
+          }
+          .supplier-wrapper {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 20px;
+            .input-checkbox {
+              margin-top: 27px;
+              margin-right: 16px;
+            }
+            .input-wrapper {
+              margin-right: 16px;
+              .input-title {
+                font-size: 14px;
+                font-weight: 400;
+                color: #393939;
+                margin-bottom: 10px;
+              }
+              .input-field {
+                padding: 14px 11px;
+                border: 1px solid #DADADA;
+                border-radius: 8px;
+                width: 100%;
+                font-size: 16px;
+              }
+              .input-field-group {
+                display: flex;
+                border: 1px solid #DADADA;
+                border-radius: 8px;
+                width: 100%;
+                .input-prefield-wrapper {
+                  padding: 14px 11px;
+                  background: #F3F4F5;
+                  .input-prefield-text {
+                    font-size: 18px;
+                    font-weight: 700;
+                    color: #31353B;
+                  }
+                }
+                .input-field {
+                  padding: 0px 0px 0px 15px;
+                  background: #FFF;
+                  border: none;
+                  border-radius: none;
+                  outline: none;
+                  font-size: 16px;
+                }
+              }
+            }
+          }
+          .add-supplier-wrapper {
+            display: flex;
+            justify-content: flex-end;
+            .add-supplier-text {
+              font-size: 14px;
+              font-weight: 700;
+              color: #017EFA;
+              text-decoration: underline; 
+            }
+            .delete-text-wrapper {
+              display: none;
+            }
+          }
+          .add-supplier-wrapper.delete-supplier-wrapper {
+            display: flex;
+            justify-content: space-between;
+            .delete-text-wrapper {
+              display: flex;
+              align-items: center;
+              .delete-icon {
+                margin-right: 5.5px;
+              }
+              .delete-supplier-text {
+                font-size: 14px;
+                font-weight: 700;
+                color: rgba(189, 30, 30, 0.6);
+                text-decoration: underline; 
+              }
+            }
+          }
+        }
+      }
+      .dialog-button-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        margin-top: 32px;
+        .btn.btn-secondary {
+          padding: 11px 16px;
+          height: 40px;
+          border: 2px solid #017EFA;
+          border-radius: 6px;
+          background: #FFF;
+          font-size: 14px;
+          font-weight: 700;
+          color: #017EFA;
+          margin-right: 16px;
+          &:disabled {
+            background: #CDCDCD;
+            color: #7E8287;
+          }
+        }
+        .btn-primary {
+          padding: 11px 16px;
+          height: 40px;
+          border: none;
+          border-radius: 6px;
+          background: #017EFA;
+          font-size: 14px;
+          font-weight: 700;
+          color: #FFF;
+          &:disabled {
+            background: #CDCDCD;
+            color: #7E8287;
+          }
+        }
+      }
+      .dialog-button-wrapper-mobile {
+        display: none;
+        align-items: center;   
+        margin-top: 32px;
+        .btn-primary {
+          padding: 11px 16px;
+          height: 40px;
+          width: 100%;
+          border: none;
+          border-radius: 6px;
+          background: #017EFA;
+          font-size: 14px;
+          font-weight: 700;
+          color: #FFF;
+          &:disabled {
+            background: #CDCDCD;
+            color: #7E8287;
+          }
+        }
       }
     }
   }
