--- a/src/styles/lapangan/Aktivitas.scss
+++ b/src/styles/lapangan/Aktivitas.scss
@@ -26,6 +26,7 @@
     }
 
     .section-2{
+        padding-bottom: 85px;
         .container-box{
             width: 100%;
             padding: 16px;
