--- a/src/styles/lapangan/Navbar.scss
+++ b/src/styles/lapangan/Navbar.scss
@@ -1,6 +1,6 @@
 .container-navbar{
     width: 100%;
-    position: sticky;
+    position: fixed;
     background-color: white;
     bottom: 0;
     height: 85px;
