--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -3039,6 +3039,67 @@
         }
       }
 
+      #modal{
+        .css-tlc64q-MuiPaper-root-MuiDialog-paper{
+          width: 100%;
+          margin: 0;
+          max-width: unset;
+          min-width: unset;
+          border-top-left-radius: 20px;
+          border-top-right-radius: 20px;
+          .add-button-options {
+            position: fixed;
+            width: 100%;
+            bottom: 0%;
+            .body{
+              width: 100%;
+              height: 444px;
+              padding: unset;
+              padding-top: 8px;
+              border-radius: 30px 30px 0px 0px;
+              box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.16);
+              background-color: white;
+              .garis{
+                  text-align: center;
+              }
+              .menu{
+                  padding-top: 24px;
+                  padding-left: 16px;
+                  padding-right: 16px;
+                  .text{
+                  font-family: 'DM Sans';
+                  font-size: 18px;
+                  font-weight: 700;
+                  color: #1E3032;
+                  padding-left: 6px;
+                  padding-bottom: 10px;
+                  }
+                
+                  .addOption{
+                    line-height: 50px;
+                    font-size: 14px;
+                    font-family: 'Roboto';
+                    .tambahKategori{
+                      border-bottom: 1px solid #CCC;
+                      cursor: pointer;
+                    }
+                    .tambahProduk{
+                      border-bottom: 1px solid #CCC;
+                      cursor: pointer;
+                    }
+                    .tambahSekaligus{
+                      border-bottom: 1px solid #CCC;
+                      cursor: pointer;
+                  }
+                  }
+              }
+            }
+            
+          }
+        }
+      }
+      
+
       // ResizeModalScanAddProdukAddCategory
         .css-hz1bth-MuiDialog-container {
         .makeStyles-paper-5{
