--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -2982,7 +2982,7 @@
           }   
         }
         .add-button-options {
-          position: absolute;
+          position: fixed;
           bottom: 0;
           width: 100%;
           z-index: 99;
