--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -810,7 +810,10 @@
         margin-right: 16px;
       }
       .btn.btn-secondary {
-        padding: 11px 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 67px;
         height: 40px;
         border: 2px solid #017EFA;
         border-radius: 6px;
@@ -898,7 +901,10 @@
     align-items: center;
     justify-content: flex-end;
     .btn.btn-secondary {
-      padding: 11px 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 67px;
       height: 40px;
       border: 2px solid #017EFA;
       border-radius: 6px;
@@ -1003,7 +1009,10 @@
       align-items: center;
       justify-content: flex-end;
       .btn.btn-secondary {
-        padding: 11px 16px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 67px;
         height: 40px;
         border: 2px solid #017EFA;
         border-radius: 6px;
@@ -1140,7 +1149,10 @@
         justify-content: flex-end;
         margin-top: 32px;
         .btn.btn-secondary {
-          padding: 11px 16px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 67px;
           height: 40px;
           border: 2px solid #017EFA;
           border-radius: 6px;
@@ -1394,7 +1406,10 @@
         justify-content: flex-end;
         margin-top: 32px;
         .btn.btn-secondary {
-          padding: 11px 16px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 67px;
           height: 40px;
           border: 2px solid #017EFA;
           border-radius: 6px;
@@ -1538,7 +1553,10 @@
         justify-content: flex-end;
         margin-top: 32px;
         .btn.btn-secondary {
-          padding: 11px 16px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 67px;
           height: 40px;
           border: 2px solid #017EFA;
           border-radius: 6px;
@@ -1792,7 +1810,10 @@
     justify-content: flex-end;
     margin-top: 32px;
     .btn.btn-secondary {
-      padding: 11px 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 67px;
       height: 40px;
       border: 2px solid #017EFA;
       border-radius: 6px;
@@ -1931,7 +1952,10 @@
         justify-content: flex-end;
         margin-top: 32px;
         .btn.btn-secondary {
-          padding: 11px 16px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 67px;
           height: 40px;
           border: 2px solid #017EFA;
           border-radius: 6px;
@@ -2156,7 +2180,10 @@
         justify-content: flex-end;
         margin-top: 32px;
         .btn.btn-secondary {
-          padding: 11px 16px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 67px;
           height: 40px;
           border: 2px solid #017EFA;
           border-radius: 6px;
