Fixing back on add sekaligus

--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -378,11 +378,11 @@
                             display: flex;
                             align-items: center;
                             height: 52px;
-                            width: 25%;
+                            width: 35%;
                             background: #FFF;
                             border: 1px solid #DADADA;
                             border-radius: 8px;
-                            margin: 0px 26px 0px;
+                            margin-right: 26px;
                             input {
                               height: 100%;
                               width: 100%;
