--- a/src/styles/lapangan/HomeLapangan.scss
+++ b/src/styles/lapangan/HomeLapangan.scss
@@ -166,10 +166,11 @@
                 font-size: 18px;
                 font-weight: 700;
                 color: #1E3032;
+                padding-bottom: 20px;
                 }
                 .btnlogout{
                     display: flex;
-                    padding-top: 34px;
+                    line-height: 50px;
                     cursor: pointer;
                     p{
                     font-family: 'DM Sans';
