--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -169,6 +169,7 @@
           .product-list-table {
             width: 100%;
             border-collapse: collapse;
+            background-color: #FFFFFF;
             thead.product-list-table-head {
               th {
                 padding: 26px;
