--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -18,6 +18,7 @@
         .product-filters-wrapper {
           display: flex;
           justify-content: space-between;
+          gap: 16px;
           .search-product-wrapper {
             display: flex;
             align-items: center;
@@ -48,7 +49,7 @@
               align-items: center;
               margin-right: 24px;
               .product-select__control, .product-select-lc__control {
-                min-width: 244px;
+                min-width: 200px;
                 height: 52px;
                 background: #F5F5F5;
                 border: none;
