--- a/src/styles/manajemen/Header.scss
+++ b/src/styles/manajemen/Header.scss
@@ -1,4 +1,7 @@
 .container-header-manajemen{
+  p {
+    margin-bottom: 0;
+  }
   display: flex;
   justify-content: space-between;
   padding-left: 60px;
