--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,7 @@ input{
   -moz-box-sizing: border-box;    
   box-sizing: border-box;
 }
+
+.placeholder {
+  background-color: unset!important;
+}
